syntax = "proto3";

package register;

option go_package = "./proto;register";

service Register {
	rpc SendSms(CallRequest) returns (CallResponse) {};
	rpc Register(RegReq) returns (CallResponse) {};
	rpc Login(LoginReq) returns (Response) {};
}

message CallRequest {
	string uuid = 1;
	string phone = 2;
	string imgCode = 3;
}

message RegReq {
	string mobile=1;
	string password=2;
	string smsCode=3;
}

message LoginReq {
	string mobile=1;
	string password=2;
}

message CallResponse {
	string errCode = 1;
}

message Response {
	string errCode = 1;
	string name = 2;
}