syntax = "proto3";

package getCaptcha;

option go_package = "./proto;getCaptcha";

service GetCaptcha {
	rpc Call(Request) returns (Response) {}
}

message Request {
  string uuid=1;
}

message Response {
	//使用切片存储图片信息，用json序列化
	bytes img=1;
	
}
